# mano-app

./: .gitignore  Cargo.toml  LEXICAL_EDITOR_GUIDE.md  Makefile  README.md  cargo.toml  components.json  jest.config.js  mano.conf.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: fedora-build.yml  fedora-release-dev.yml  release-dev.yml  release-tag.yml  release.yml  tauri-build.yml
components/ui/: context-menu.tsx
crates/gpui-wry/: Cargo.toml  README.MD
crates/gpui-wry-macros/: Cargo.toml
crates/gpui-wry-macros/src/: lib.rs
crates/gpui-wry/examples/: greet.rs
crates/gpui-wry/src/: lib.rs  webview.rs
crates/mano-app/: Cargo.toml  README.md
crates/mano-app/assets/: splash.html
crates/mano-app/src/: lib.rs  main.rs
examples/: greet.rs
examples/apps/greet/: README.md  index.html  package-lock.json  package.json
mano-app/: LEXICAL_EDITOR_GUIDE.md  index.html  package.json  pnpm-lock.yaml  preview.html  tsconfig.json  vite.config.ts
mano-app/src/: App.css  App.tsx  LexicalEditorPreview.tsx  global.d.ts  main.tsx  preview.tsx
mano-app/src/components/: Gmail.module.css  GmailSidebar.tsx  PlainTextEditor.tsx  RichTextEditor.tsx  Welcome.tsx  context-menu.tsx  controller.test.ts  controller.ts  fill-flex-parent.tsx  merge-refs.tsx  model.ts  types.ts
mano-app/src/components/LexicalEditor/: AppWithFile.tsx  Editor.tsx  Settings.tsx  index.css
mano-tauri/: Cargo.toml  tauri.conf.json
mano-tauri/capabilities/: default.json
mano-tauri/icons/: icon.icns
mano-tauri/src/: lib.rs
mano-ui/: DRAG_DROP_TEST.md  EDITOR_SPLIT.md  IDE_LAYOUT.md  LAYOUT.md  PLATE_IMPLEMENTATION.md  README.md  SIDEBAR_TOGGLE.md  UPGRADE_NOTES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-mano-config.js  vite.config.ts
mano-ui/.github/: copilot-instructions.md
mano-ui/doc/: EDITOR_ARCHITECTURE_GUIDE.md  EDITOR_ARCHITECTURE_GUIDE.zh-CN.md  LAYOUT.md  LAYOUT.zh-CN.md  MULTI_TAB_SYNC_IMPLEMENTATION.md  MULTI_TAB_SYNC_IMPLEMENTATION.zh-CN.md  PLATE-NODE-RESOLVE-ISSUE.zh-CN.md  QUICKSTART.md  README.md
mano-ui/examples/: example.mano  example.slate.json  mano.conf.json  第一回_灵根育孕源流出_心性修持大道生.mano
mano-ui/src/: App.tsx  index.css
mano-ui/src/components/editor/: TextEditor.tsx  editor-base-kit.tsx  editor-kit.tsx  plate-editor.tsx  readOnlyLockContext.tsx
mano-ui/src/components/ide/: ActivityBar.tsx  BottomPanel.tsx  EdgeDropZone.tsx  EditorContainer.tsx  EditorGroup.tsx  EditorGroupWrapper.tsx  FloatingNotification.tsx  IDELayout.tsx  PrimarySidebar.tsx  StatusBar.tsx  TitleBar.tsx
mano-ui/src/components/plate/: AutoSavePlateEditor.tsx  PlateEditor.tsx
mano-ui/src/components/ui/: ai-chat-editor.tsx  ai-toolbar-button.tsx  align-toolbar-button.tsx  block-discussion.tsx  block-draggable.tsx  block-list-static.tsx  block-menu.tsx  block-selection-variants.ts  block-selection.tsx  block-suggestion-utils.ts  block-suggestion.tsx  button-variants.ts  calendar.tsx  callout-node-static.tsx  callout-node.tsx  caption.tsx  code-block-node-static.tsx  code-block-node.tsx  column-node-static.tsx  column-node.tsx  comment-node-static.tsx  comment-node.tsx  comment-utils.ts  comment.tsx  cursor-overlay.tsx  date-node-static.tsx  editor-static.tsx  editor.tsx  emoji-node.tsx  emoji-toolbar-button.tsx  equation-node-static.tsx  equation-node.tsx  excalidraw-node.tsx  fixed-toolbar-buttons.tsx  fixed-toolbar-classic-buttons.tsx  fixed-toolbar.tsx  floating-toolbar-buttons.tsx  floating-toolbar-classic-buttons.tsx  floating-toolbar.tsx  font-color-constants.ts  (+36 more)
mano-ui/src/contexts/: EditorContext.tsx  EditorContextBase.ts
mano-ui/src/hooks/: use-debounce.ts  useAutoSave.ts  useEditor.ts  useFileSystemAutoSave.ts  useIndexedDB.ts
mano-ui/src/icons/: ManoIcon.tsx  ManoLogoIcon.tsx  icon.icns  icons.ts
mano-ui/src/lib/: tree-utils.ts  utils.ts
mano-ui/src/services/: fileSystem.ts
mano-ui/src/services/fileSystem/: browserStrategy.ts  chromeStrategy.ts  index.ts  safariStrategy.ts  tauriStrategy.ts  types.ts
mano-ui/src/types/: editor.ts  mano-config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: DirectoryPanel.tsx  Editor.tsx  FileTree.tsx  FixedToolbar.tsx  Gmail.module.css  GmailSidebar.tsx  LexicalEditor.tsx  MarkdownEditor.tsx  MenuBar.tsx  PlainTextEditor.tsx  PropertyPanel.tsx  RichTextEditor.tsx  TaskEditor.tsx  YooptaEditor.tsx  controller.test.ts  controller.ts  fill-flex-parent.tsx  gmail-data.ts  model.ts  types.ts
src/components/LexicalEditor/: App.tsx  AppWithFile.tsx  Editor.tsx  EmbeddedPlayground.tsx  Settings.tsx  index.css
src/components/LexicalEditor/nodes/: ImageComponent.tsx  MentionNode.ts  StickyNode.tsx
(+45 files in other folders)
