[package]
name = "gpui-wry-workspace"
version = "0.1.0"
edition = "2021"



[dependencies]
gpui-wry = { path = "./crates/gpui-wry" }
gpui-wry-macros = { path = "./crates/gpui-wry-macros" }
gpui = { workspace = true }
gpui-component = { workspace = true }
raw-window-handle = { workspace = true }
http = { workspace = true }
serialize-to-javascript = { workspace = true }
serde = { workspace = true }

[workspace]
members = ["crates/gpui-wry", "crates/gpui-wry-macros", "crates/gpui-wry-app"]
resolver = "3"

[workspace.dependencies]
gpui = "0.2.0"
gpui-component = { version = "0.3.1", features = ["webview"] }
gpui-wry-macros = { path = "./crates/gpui-wry-macros" }
gpui-wry = { path = "./crates/gpui-wry" }
wry = { version = "0.53.5" }
raw-window-handle = { version = "0.6", features = ["std"] }
http = { version = "1.3.1" }
serialize-to-javascript = { version = "0.1.2" }
serde = "1.0.228"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
dirs = "5.0"
chrono = "0.4"
