[package]
name = "mano-app-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { workspace = true }
gpui-component = { workspace = true }
serde = { workspace = true }
gpui-wry = { workspace = true }
http = { workspace = true } # this is needed for the macro

[workspace]
members = ["crates/gpui-wry", "crates/gpui-wry-macros", "crates/mano-app"]
resolver = "3"

[workspace.dependencies]
gpui = "0.2.0"
gpui-component = { version = "0.3.1", features = ["webview"] }
wry = { version = "0.53.5" }
raw-window-handle = { version = "0.6", features = ["std"] }
http = { version = "1.3.1" }
serialize-to-javascript = { version = "0.1.2" }
serde = "1.0.228"
gpui-wry = { path = "./crates/gpui-wry" }
gpui-wry-macros = { path = "./crates/gpui-wry-macros" }
