[package]
name = "mano-workspace"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/gpui-wry", "crates/gpui-wry-macros", "crates/mano-app"]
resolver = "3"

[dependencies]
gpui.workspace = true
gpui-component = { version = "0.3.1", features = ["webview"] }
gpui-wry.workspace = true
gpui-wry-macros.workspace = true
wry.workspace = true
raw-window-handle.workspace = true
http.workspace = true
serialize-to-javascript.workspace = true
serde.workspace = true

[workspace.dependencies]
gpui = "0.2.0"
gpui-component = { version = "0.3.1", features = ["webview"] }
wry = { version = "0.53.5" }
raw-window-handle = { version = "0.6", features = ["std"] }
http = { version = "1.3.1" }
serialize-to-javascript = { version = "0.1.2" }
serde = "1.0.228"
gpui-wry = { path = "crates/gpui-wry" }
gpui-wry-macros = { path = "crates/gpui-wry-macros" }
[[example]]
name = "greet"
path = "examples/greet.rs"
