[package]
name = "mano-app"
version = "0.1.0"
edition = "2021"
description = "Mano-app for novel writing"
authors = ["dspo <rainchan365@163.com>"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "mano-app"
path = "src/main.rs"

[dependencies]
gpui-wry = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
rust-embed = "8.9.0"
anyhow = "1.0.100"
tracing-subscriber = "0.3.20"
http.workspace = true
serde.workspace = true
serde_json = "1.0.145"

[dev-dependencies]
